# project-group10

./: .buildinfo  .gitignore  Analysis.html  Analysis.ipynb  AnalysisV2.qmd  AnalysisV3.qmd  Data-Preparation.html  Data-Preparation.ipynb  Data-Preperation.html  Data-Visualization.html  Exploration.ipynb  LICENSE  Main.html  Main.ipynb  Makefile  README.html  README.md  R_Practice.ipynb  Regression-Analysis.html  Regression-AnalysisV2.html  Regression-AnalysisV2.ipynb  _config.yml  _toc.yml  contribution_statement.html  contribution_statement.md  environment.yml  genindex.html  objects.inv  project-description.html  requirements.txt  search.html  searchindex.js  setup.cfg  vis1.R
.github/workflows/: book.yml
_sources/: Analysis.ipynb  Data-Preparation.ipynb  Data-Preperation.ipynb  Main.ipynb  README.md  Regression-Analysis.ipynb  Regression-AnalysisV2.ipynb
cancerolstools/: visuals.py
cancerolstools.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
cancerolstools/tests/: test_ols.py  test_preprocess.py  test_visuals.py
r-analysis/: AnalysisWIP5.1.qmd
tools/: preprocess.py
