[metadata]
name             = cancerolstools
version          = attr: cancerolstools.__version__
author           = Danielle Killeen, Didi Duan, Noah Tran, Brandon Rodriguez, Jiayi Qiu
author_email     = 
description      = A Python library corresponding to the Cancer OLS challenge
long_description = file: README.md, LICENSE
long_description_content_type = text/markdown
keywords         = 
license          = BSD 3-Clause License
classifiers      =
	Programming Language :: Python :: 3
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent

[options]
include_package_data = True
packages = find:
# These should be consistent with what is specified in the environment.yml
python_requires  = >= 3.6,
install_requires =
	numpy
    pandas
    matplotlib
    seaborn
    plotly
    statsmodels
    
[options.packages.find]
exclude =
    examples*
    docs*